--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
         <relativePath>../../parent-poms/parent-poms/java-parent/pom.xml</relativePath>
     </parent>
     <groupId>com.criteo.java</groupId>
-    <artifactId>java-template</artifactId>
+    <artifactId>casspoke</artifactId>
     <!-- DO NOT CHANGE THE VERSION. THIS EXACT ONE IS EXPECTED BY THE JMOAB -->
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>java-template</name>
-    <description>Template for java program to be build by the jmoab</description>
+    <name>casspoke</name>
+    <description>Probe for cassandra cluster</description>
 
     <inceptionYear>2017</inceptionYear>
     <organization>
