feat: first release with availability
Change-Id: Ib1a0cfa18bbbf77448d2364437354a13468d6af8

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Created by .ignore support plugin (hsz.mobi)
+### Java template
 # Compiled class file
 *.class
 
@@ -33,3 +35,5 @@ build/
 # Gradle build system
 .gradle/
 gradle/
+.gitignore
+build
