--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <mainClass>com.criteo.java.template.Main</mainClass>
+        <mainClass>com.criteo.nosql.casspoke.Main</mainClass>
     </properties>
 
     <dependencies>
