--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,6 @@
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
@@ -25,6 +19,7 @@ hs_err_pid*
 
 # IDE specific
 .idea/
+*.iml
 gradlew
 gradlew.bat
 
