--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@ app:
   httpServerPort: 8080
 
 consul:
-  host: consul01-am5.central.criteo.preprod:8500
+  host: consul01-par.central.criteo.preprod:8500
 #  host: consul.service.consul
   port: 8500
   timeoutInSec: 10
