casspoke: Fix Runner lookup
- Remove CASSANDRA from possible valueis in configuration
(stay a while for compat)
- Replace loadClass by forName. The first works, because classes were
already linked. It's a bad assumption... SHAME!

Change-Id: I4ee05ced71b1e73f621f2136ffbe2b80839c3b9c

--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,7 @@ consul:
   refreshEveryMin: 1
 
 service:
-  type: CASSANDRA
+  type: CassandraRunnerStats
   timeoutInSec: 60
   tags:
     - cluster=cstars04
