[breaking] casspoke: rename attributes in config
Change-Id: I786d12488883d93f7c882271363fc202b2e03bf4

--- a/config.yml
+++ b/config.yml
@@ -1,14 +1,13 @@
 app:
-  tickRateInSec: 10
+  measurementPeriodInSec: 10
+  refreshDiscoveryPeriodInSec: 60
   httpServerPort: 8080
 
 consul:
-  host: consul01-par.central.criteo.preprod
-#  host: consul.service.consul
+  host: consul.service.consul
   port: 8500
   timeoutInSec: 10
   readConsistency: STALE
-  refreshEveryMin: 1
 
 service:
   type: CassandraRunnerStats
