casspoke: move tags configuration
- tags was given in services section. Now it is part of the discovery.
So it changes Config and the Discovery objects.

Change-Id: Ic35987556447e3ffca9615b4526ea3f713390b6c

--- a/config.yml
+++ b/config.yml
@@ -3,15 +3,15 @@ app:
   refreshDiscoveryPeriodInSec: 60
   httpServerPort: 8080
 
-consul:
+discovery:
   host: consul.service.consul
   port: 8500
   timeoutInSec: 10
   readConsistency: STALE
+  tags:
+    - cluster=cstars04
+    # - cassandra
 
 service:
   type: CassandraRunnerStats
   timeoutInSec: 60
-  tags:
-    - cluster=cstars04
-    # - cassandra
