Adapt moab-settings.gradle to new BuildWithMaven plugin
Change-Id: I7d0cbbf23d01241f0a2b5eae4b030817e9f810de

--- a/moab-settings.gradle
+++ b/moab-settings.gradle
@@ -1,6 +1,4 @@
-if (!file('build.gradle').text.contains('com.criteo.moab-module')) {
-    // This build.gradle file was not translated to JMOAB2. We don't include it
-    project(':probes:casspoke').buildFileName = 'untranslated.gradle'
+if (settings.moabWalker == settings.moabMixedWalker) {
     moabMavenWalker.includeAll(this)
 }
 
