feat: adding docker image push to dockerhub

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,10 @@ deploy:
   skip_cleanup: true
   on:
     tags: true
+after_success:
+  - docker login -u $DOCKER_USER -p $DOCKER_PASS
+  - export REPO=criteord/casspoke
+  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
+  - cd docker; docker build -f Dockerfile -t $REPO:$TAG .
+  - docker tag $REPO:$TAG $REPO:latest
+  - docker push $REPO
