--- a/config.yml
+++ b/config.yml
@@ -1,21 +1,26 @@
 app:
+  # A measurement should be taken every x seconds
   measurementPeriodInSec: 10
+  # Discovery of the cluster should be re-done every x seconds (usefull if you use consul or teardown often clusters)
   refreshDiscoveryPeriodInSec: 60
+  # Prometheus http server port endpoint
   httpServerPort: 8080
 
 discovery:
-  #staticDns:
-  #  clustername: cstars04
-  #  host: 10.50.4.55:9042
-  consul:
-    host: consul.service.consul
-    port: 8500
-    timeoutInSec: 10
-    readConsistency: STALE
-    tags:
-      #- cluster=cstars04
-      - cassandra
+  staticDns:
+    clustername: cstars04
+    host: cassandra-seed1.fqdn:9042,cassandra-seed2.fqdn:9042
+    
+#  If you want to use consul to do the discovery    
+#  consul:
+#    host: consul.service.consul
+#    port: 8500
+#    timeoutInSec: 10
+#    readConsistency: STALE
+#    tags:
+#      - cassandra
 
+# Not usefull for now
 service:
   type: CassandraRunner
   timeoutInSec: 60
