--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@ app:
   measurementPeriodInSec: 10
   # Operations timeout
   timeoutInSec: 60
-  # Discovery of the cluster should be re-done every x seconds (usefull if you use consul or teardown often clusters)
+  # Discovery of the cluster should be re-done every x seconds (useful if you use consul or teardown often clusters)
   refreshDiscoveryPeriodInSec: 60
   # Prometheus http server port endpoint
   httpServerPort: 8080
