Docker: bump for new release

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:11.0.1-jre-slim-sid
 
-ARG CASSPOKE_VERSION=1.1
-ARG CASSPOKE_SHA512=51e7a22e579d159a0cb1f3248318ed588b9bbf57b4f4674e0637c37b463c6cb248c75b7218ce2727d67e206653f2e750c4bedb7c11e3dded79eb35664efc4315
+ARG CASSPOKE_VERSION=1.2
+ARG CASSPOKE_SHA512=7f35e402aa82996bf5ac9591e33d9254a638dcedb19ff8dc80be03a8ff4c95cbd77a996ee164a47a94376272867b35d27694d235366c01e14223d50f9d954141
 
 RUN mkdir -p /opt/casspoke
 ADD https://github.com/Yelp/dumb-init/releases/download/v1.2.2/dumb-init_1.2.2_amd64 /sbin/dumb-init
@@ -13,4 +13,5 @@ ADD run.sh /
 RUN chmod +x /sbin/dumb-init ; \
     chmod 444 /opt/casspoke/*
 
+EXPOSE 8080
 CMD ["/sbin/dumb-init", "/bin/bash", "/run.sh"]
